Add more OIMAns to list, alphabetize

--- a/contacts.qmd
+++ b/contacts.qmd
@@ -9,8 +9,6 @@ The SWAMP Team is composed of multiple team members at the State Water Board wit
 +===================================================================+=======================================================+============================================================================================+
 | Ali Dunn                                                          | Senior Environmental Scientist, Supervisor, Unit Lead | SWAMP Coordinator of statewide monitoring programs, plans and budgets                      |
 +-------------------------------------------------------------------+-------------------------------------------------------+--------------------------------------------------------------------------------------------+
-| Leah Benton                                                       | CivicSpark Fellow                                     | Tribal Data Initiatives                                                                    |
-+-------------------------------------------------------------------+-------------------------------------------------------+--------------------------------------------------------------------------------------------+
 | Anna Holder                                                       | Environmental Scientist                               | SWAMP Statewide Bioaccumulation Program Coordinator                                        |
 |                                                                   |                                                       |                                                                                            |
 |                                                                   |                                                       | Data science, data visualization and programming (R \[preferred\], Python, Unix, SQL, GIS) |
@@ -22,6 +20,8 @@ The SWAMP Team is composed of multiple team members at the State Water Board wit
 |                                                                   |                                                       | Tribal Coordinator                                                                         |
 |                                                                   |                                                       |                                                                                            |
 |                                                                   |                                                       | Racial Equity Trainer                                                                      |
++-------------------------------------------------------------------+-------------------------------------------------------+--------------------------------------------------------------------------------------------+
+| Leah Benton                                                       | CivicSpark Fellow                                     | Tribal Data Initiatives                                                                    |
 +-------------------------------------------------------------------+-------------------------------------------------------+--------------------------------------------------------------------------------------------+
 | Mary Tappel                                                       | Environmental Scientist                               | Webpage updates                                                                            |
 +-------------------------------------------------------------------+-------------------------------------------------------+--------------------------------------------------------------------------------------------+
@@ -70,23 +70,29 @@ For more information, visit the [SWAMP IQ Wiki](https://sites.google.com/view/sw
 
 ## OIMA
 
-+----------------+----------------------------------------+-----------------------------------------------------------------------------------------+
-| Name           | Title                                  | Program Area(s)                                                                         |
-+================+========================================+=========================================================================================+
-| Carly Nilson   | Senior Environmental Scientist         | SWAMP Statewide Freshwater and Estuarine Harmful Algal Bloom (FHAB) Program Coordinator |
-+----------------+----------------------------------------+-----------------------------------------------------------------------------------------+
-| Chad Fearing   | Associate Governmental Program Analyst | Contracts                                                                               |
-+----------------+----------------------------------------+-----------------------------------------------------------------------------------------+
-| Devan Burke    | Associate Governmental Program Analyst | Contracts                                                                               |
-|                |                                        |                                                                                         |
-|                |                                        | Openscapes                                                                              |
-|                |                                        |                                                                                         |
-|                |                                        | Racial equity data projects and communication                                           |
-+----------------+----------------------------------------+-----------------------------------------------------------------------------------------+
-| Erick Burres   | Senior Environmental Scientist         | SWAMP Clean Water Team Coordinator                                                      |
-+----------------+----------------------------------------+-----------------------------------------------------------------------------------------+
-| Marisa VanDyke | Senior Environmental Scientist         | SWAMP Statewide Freshwater and Estuarine Harmful Algal Bloom (FHAB) Program Coordinator |
-+----------------+----------------------------------------+-----------------------------------------------------------------------------------------+
++-----------------+----------------------------------------+-----------------------------------------------------------------------------------------+
+| Name            | Title                                  | Program Area(s)                                                                         |
++=================+========================================+=========================================================================================+
+| Greg Gearheart  | Deputy Director                        | OIMA                                                                                    |
++-----------------+----------------------------------------+-----------------------------------------------------------------------------------------+
+| Andrew Hamilton | Assistant Deputy Director              | OIMA                                                                                    |
++-----------------+----------------------------------------+-----------------------------------------------------------------------------------------+
+| Carly Nilson    | Senior Environmental Scientist         | SWAMP Statewide Freshwater and Estuarine Harmful Algal Bloom (FHAB) Program Coordinator |
++-----------------+----------------------------------------+-----------------------------------------------------------------------------------------+
+| Chad Fearing    | Associate Governmental Program Analyst | Contracts                                                                               |
++-----------------+----------------------------------------+-----------------------------------------------------------------------------------------+
+| Devan Burke     | Associate Governmental Program Analyst | Contracts                                                                               |
+|                 |                                        |                                                                                         |
+|                 |                                        | Openscapes                                                                              |
+|                 |                                        |                                                                                         |
+|                 |                                        | Racial equity data projects and communication                                           |
++-----------------+----------------------------------------+-----------------------------------------------------------------------------------------+
+| Erick Burres    | Senior Environmental Scientist         | SWAMP Clean Water Team Coordinator                                                      |
++-----------------+----------------------------------------+-----------------------------------------------------------------------------------------+
+| Marisa VanDyke  | Senior Environmental Scientist         | SWAMP Statewide Freshwater and Estuarine Harmful Algal Bloom (FHAB) Program Coordinator |
++-----------------+----------------------------------------+-----------------------------------------------------------------------------------------+
+| Nick Martorano  | Executive Director                     | California Water Quality Monitoring Council                                             |
++-----------------+----------------------------------------+-----------------------------------------------------------------------------------------+
 
 ## Former Fellows & Interns
 
