--- a/values.qmd
+++ b/values.qmd
@@ -1,3 +1,7 @@
 # Values
 
-What are our values, and what do we want our culture to be?
+The following four values are at the core of who we are and how we work:
+
+**We build trust - We adapt - We work in partnership - We drive quality**
+
+See the [OIMA Values Statement](https://drive.google.com/file/d/1Bqsmw-M269x-4P6Lv4vDOLdxKp_zcrl6/view?usp=sharing) for how each of these values have been operationalized into behaviors that we are all empowered, expected, and held accountable to demonstrating.
