--- a/values.qmd
+++ b/values.qmd
@@ -2,6 +2,12 @@
 
 The following four values are at the core of who we are and how we work:
 
-**We build trust - We adapt - We work in partnership - We drive quality**
+**We build trust:** we strive to be a trusted source of water data, information, and processes, and we invest the time and space required to build, rebuild, and maintain trusting relationships.
+
+**We adapt:** we strive to be adaptable and innovative in how we work and the products, services, and resources we develop.
+
+**We work in partnership:** collaboration and partnerships are key to who we are and how we work. We believe the way we work directly impacts what we produce.
+
+**We drive quality:** we strive to produce quality information, data, products, and services. We know the quality of the systems and processes we use determine the outcomes we are able to achieve.
 
 See the [OIMA Values Statement](https://drive.google.com/file/d/1Bqsmw-M269x-4P6Lv4vDOLdxKp_zcrl6/view?usp=sharing) for how each of these values have been operationalized into behaviors that we are all empowered, expected, and held accountable to demonstrating.
