update framing language

--- a/values.qmd
+++ b/values.qmd
@@ -1,6 +1,6 @@
 # Values
 
-The following four values are at the core of who we are and how we work:
+The following four values are at the core of who we are as an office within the Water Boards, and how we work:
 
 **We build trust:** we strive to be a trusted source of water data, information, and processes, and we invest the time and space required to build, rebuild, and maintain trusting relationships.
 
