--- a/values.qmd
+++ b/values.qmd
@@ -10,4 +10,4 @@ The following four values are at the core of who we are as an office within the 
 
 **We drive quality:** we strive to produce quality information, data, products, and services. We know the quality of the systems and processes we use determine the outcomes we are able to achieve.
 
-See the [OIMA Values Statement](https://drive.google.com/file/d/1Bqsmw-M269x-4P6Lv4vDOLdxKp_zcrl6/view?usp=sharing) for how each of these values have been operationalized into behaviors that we are all empowered, expected, and held accountable to demonstrating.
+See the [OIMA Values Statement](https://www.waterboards.ca.gov/resources/oima/docs/oima-values-statement-2023.pdf) for how each of these values have been operationalized into behaviors that we are all empowered, expected, and held accountable to demonstrating.
