--- a/expectations.qmd
+++ b/expectations.qmd
@@ -46,16 +46,20 @@ DRAFT - SWAMP Unit to Review and revise as appropriate
 | (Teams)          | When you have specific topics to discuss                                                                                                                                            |                                   | Respect the availability of others and schedule as soon as you know a meeting is needed - for most folks scheduling meetings 2-weeks (or more!) in advance is normal | The agenda can be formal or a few bullets - what's important is that there is a known purpose, priorities, and expected outcome for the meeting.                               |
 |                  |                                                                                                                                                                                     |                                   |                                                                                                                                                                      |                                                                                                                                                                                |
 |                  |                                                                                                                                                                                     |                                   |                                                                                                                                                                      | If the meeting is recurring, cancel it if there is no need to meet and follow-up with an email/chat instead.                                                                   |
+|                  |                                                                                                                                                                                     |                                   |                                                                                                                                                                      |                                                                                                                                                                                |
+|                  |                                                                                                                                                                                     |                                   |                                                                                                                                                                      | For other tips, see: [How to Run a Meeting](https://docs.google.com/presentation/u/2/d/1HSdgVQjq0d3UYh-aA4uWHXxYYpySn_xXwfn_M4Ms8Ts/htmlpresent)                               |
 +------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Meetings         | See above                                                                                                                                                                           | External partners                 | See above                                                                                                                                                            | Develop a formal agenda - send out at least 1 week prior to the meeting/webinar.                                                                                               |
 |                  |                                                                                                                                                                                     |                                   |                                                                                                                                                                      |                                                                                                                                                                                |
-| (Zoom)           | Use Zoom meetings when communicating with external partners. See [instructions for scheduling Zoom meetings](https://cawaterboarddatacenter.github.io/swamp-manual/tech.html#zoom). |                                   |                                                                                                                                                                      |                                                                                                                                                                                |
+| (Zoom)           | Use Zoom meetings when communicating with external partners. See [instructions for scheduling Zoom meetings](https://cawaterboarddatacenter.github.io/swamp-manual/tech.html#zoom). |                                   |                                                                                                                                                                      | For other tips, see: [How to Run a Meeting](https://docs.google.com/presentation/u/2/d/1HSdgVQjq0d3UYh-aA4uWHXxYYpySn_xXwfn_M4Ms8Ts/htmlpresent)                               |
 |                  |                                                                                                                                                                                     |                                   |                                                                                                                                                                      |                                                                                                                                                                                |
 |                  | Use Zoom webinar for large, publicly facing events.                                                                                                                                 |                                   |                                                                                                                                                                      |                                                                                                                                                                                |
 |                  |                                                                                                                                                                                     |                                   |                                                                                                                                                                      |                                                                                                                                                                                |
 |                  | [Meeting vs Webinar comparison](https://support.zoom.us/hc/en-us/articles/115005474943-Meetings-and-webinars-comparison)                                                            |                                   |                                                                                                                                                                      |                                                                                                                                                                                |
 +------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Check-ins / 1:1s | For regular check-in or update meetings                                                                                                                                             | Internal                          | Meetings tend to be 1-hour every-other week, but can be adjusted as needed                                                                                           | Use a shared document (e.g., OneNote, Asana, Word Doc) to keep track of standard agenda items, topics to discuss at the next meeting, and to take notes or record action items |
+|                  |                                                                                                                                                                                     |                                   |                                                                                                                                                                      |                                                                                                                                                                                |
+|                  |                                                                                                                                                                                     |                                   |                                                                                                                                                                      | For other tips, see: [How to Run a Meeting](https://docs.google.com/presentation/u/2/d/1HSdgVQjq0d3UYh-aA4uWHXxYYpySn_xXwfn_M4Ms8Ts/htmlpresent)                               |
 +------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Co-working       | For brainstorming, screen-sharing, skill building, problem solving                                                                                                                  | Internal and/or external partners | Schedule as needed                                                                                                                                                   | Can have a pre-determined agenda or be informally and organically developed during the co-working session                                                                      |
 +------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
