Added Shiny publishing procedures and policy link to Tech - R & RStudio section

--- a/tech.qmd
+++ b/tech.qmd
@@ -69,7 +69,7 @@ For more information about ArcGIS Pro and the Water Boards ArcGIS Portal, view t
 
 Both R and RStudio are available for installation in the Software Center. If you do not see either of them on the list of available programs, please contact the DIT Help Desk at [help\@waterboards.ca.gov](mailto:help@waterboards.ca.gov) to request them.
 
-**R Shiny** is a platform for developing web applications using the R programming language. The State Water Board maintains a cloud-based Shiny account (shinyapps.io) that can be used to publish Shiny applications online. For more information, please contact the account administrator, David Altare at [david.altare\@waterboards.ca.gov](mailto:david.altare@waterboards.ca.gov).
+**R Shiny** is a platform for developing web applications using the R programming language. The State Water Board maintains a cloud-based Shiny account (shinyapps.io) that can be used to publish Shiny applications online. For more information, please see the [Shiny publishing procedures and policy](https://cawaterboards.sharepoint.com/sites/OIMA/DIA/SitePages/Home.aspx).
 
 ### Git & GitHub
 
