updated procurement info

--- a/contacts.qmd
+++ b/contacts.qmd
@@ -74,29 +74,29 @@ For more information, visit the [SWAMP IQ Wiki](https://sites.google.com/view/sw
 
 ## OIMA
 
-+-----------------+----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Name            | Title                                  | Program Area(s)                                                                                                                                                                     |
-+=================+========================================+=====================================================================================================================================================================================+
-| Greg Gearheart  | Deputy Director                        | [OIMA](https://www.waterboards.ca.gov/resources/oima/)                                                                                                                              |
-+-----------------+----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Andrew Hamilton | Assistant Deputy Director              | [OIMA](https://www.waterboards.ca.gov/resources/oima/)                                                                                                                              |
-+-----------------+----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Carly Nilson    | Senior Specialist                      | [SWAMP Statewide Freshwater and Estuarine Harmful Algal Bloom (FHAB) Program](https://www.waterboards.ca.gov/water_issues/programs/swamp/freshwater_cyanobacteria.html) Coordinator |
-+-----------------+----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Chad Fearing    | Associate Governmental Program Analyst | Contracts                                                                                                                                                                           |
-+-----------------+----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Devan Burke     | Associate Governmental Program Analyst | Contracts                                                                                                                                                                           |
-|                 |                                        |                                                                                                                                                                                     |
-|                 |                                        | [Openscapes](https://cawaterboarddatacenter.github.io/swrcb-openscapes/)                                                                                                            |
-|                 |                                        |                                                                                                                                                                                     |
-|                 |                                        | Racial equity data projects and communication                                                                                                                                       |
-+-----------------+----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Erick Burres    | Citizen Science Coordinator            | [SWAMP Clean Water Team](https://www.waterboards.ca.gov/water_issues/programs/swamp/cwt_volunteer.html)                                                                             |
-+-----------------+----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Marisa VanDyke  | Senior Specialist                      | [SWAMP Statewide Freshwater and Estuarine Harmful Algal Bloom (FHAB) Program](https://www.waterboards.ca.gov/water_issues/programs/swamp/freshwater_cyanobacteria.html) Coordinator |
-+-----------------+----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Nick Martorano  | Executive Director                     | [California Water Quality Monitoring Council](https://mywaterquality.ca.gov/)                                                                                                       |
-+-----------------+----------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
++-----------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Name            | Title                                  | Program Area(s)                                                                                                                                                                                            |
++=================+========================================+============================================================================================================================================================================================================+
+| Greg Gearheart  | Deputy Director                        | [OIMA](https://www.waterboards.ca.gov/resources/oima/)                                                                                                                                                     |
++-----------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Andrew Hamilton | Assistant Deputy Director              | [OIMA](https://www.waterboards.ca.gov/resources/oima/)                                                                                                                                                     |
++-----------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Carly Nilson    | Senior Specialist                      | [SWAMP Statewide Freshwater and Estuarine Harmful Algal Bloom (FHAB) Program](https://www.waterboards.ca.gov/water_issues/programs/swamp/freshwater_cyanobacteria.html) Coordinator, OIMA Procurement Lead |
++-----------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Chad Fearing    | Associate Governmental Program Analyst | Contracts                                                                                                                                                                                                  |
++-----------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Devan Burke     | Associate Governmental Program Analyst | Contracts                                                                                                                                                                                                  |
+|                 |                                        |                                                                                                                                                                                                            |
+|                 |                                        | [Openscapes](https://cawaterboarddatacenter.github.io/swrcb-openscapes/)                                                                                                                                   |
+|                 |                                        |                                                                                                                                                                                                            |
+|                 |                                        | Racial equity data projects and communication                                                                                                                                                              |
++-----------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Erick Burres    | Citizen Science Coordinator            | [SWAMP Clean Water Team](https://www.waterboards.ca.gov/water_issues/programs/swamp/cwt_volunteer.html)                                                                                                    |
++-----------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Marisa VanDyke  | Senior Specialist                      | [SWAMP Statewide Freshwater and Estuarine Harmful Algal Bloom (FHAB) Program](https://www.waterboards.ca.gov/water_issues/programs/swamp/freshwater_cyanobacteria.html) Coordinator                        |
++-----------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Nick Martorano  | Executive Director                     | [California Water Quality Monitoring Council](https://mywaterquality.ca.gov/)                                                                                                                              |
++-----------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 
 ## Former Fellows & Interns
 
