--- a/procurement.qmd
+++ b/procurement.qmd
@@ -1,11 +1,14 @@
 # Procurement
 
-How do we get the items we need?
+Please work with OIMA's procurement lead, Carly Nilson, to coordinate your supplies purchases. The process changes frequently. It can take several months (up to 12 months or more) from time of placing order to receiving goods, so plan in advance if possible.
 
-Frequency of procurement process? (I.e. we all need to plan/think WAY ahead!)
+**Current process includes:**
 
-## Technical
-
-## Office supplies
-
-## Monitoring supplies?
+1.  Compilation of supply/procurement list in excel
+2.  Completion of form SWRCB 121
+    -   Fill out separate form based on field or lab supplies and where they will be mailed (for example, for RB1, I will fill out 2 SWRCB 121 forms).
+3.  Route SWRCB 121 form through Adobe sign. Must be signed by submitter, supervisor, budget analyst, and budget manager.
+4.  Submit the form and original excel list to the general procurement inbox for processing.
+5.  If approved, you track through the purchase log: [FY 23-24_FI\$Cal_PPSU_Coordination.xlsx](https://cawaterboards.sharepoint.com/:x:/g/DAS/Procurement/ERsauyllrtdJoHDhIFrDZ-QBfAnGsYWrVcVSniPnwSyV7w?e=llujVl "https://cawaterboards.sharepoint.com/:x:/g/das/procurement/ersauyllrtdjohdhifrdz-qbfangsywrvcvsnipnwsyv7w?e=llujvl").
+6.  Submitter is responsible for ensuring items are received and work directly with the vendor on any issues. Procurement's only role is to execute bid with vendor.
+7.  Confirm receipt of items with submittal of SWRCB 128 form to DAS Payments
