--- a/culture/index.qmd
+++ b/culture/index.qmd
@@ -9,3 +9,29 @@ In SWAMP we understand that our culture is a result of our shared core values an
 > A culture is strong when people work with each other, for each other. A culture is weak when people work against each other, for themselves.
 
 *Simon Sinek*
+
+# Our Values
+
+The following four values are at the core of who we are and how we work as an office (OIMA) and within the SWAMP Unit at the Water Boards:
+
+**We build trust:** we strive to be a trusted source of water data, information, and processes, and we invest the time and space required to build, rebuild, and maintain trusting relationships.
+
+**We adapt:** we strive to be adaptable and innovative in how we work and the products, services, and resources we develop.
+
+**We work in partnership:** collaboration and partnerships are key to who we are and how we work. We believe the way we work directly impacts what we produce.
+
+**We drive quality:** we strive to produce quality information, data, products, and services. We know the quality of the systems and processes we use determine the outcomes we are able to achieve.
+
+See the [OIMA Values Statement](https://www.waterboards.ca.gov/resources/oima/docs/oima-values-statement-2023.pdf) for how each of these values have been operationalized into behaviors that we are all empowered, expected, and held accountable to demonstrating.
+
+# Code of Conduct
+
+::: callout-tip
+Let's write one & discuss!
+:::
+
+Check out some Codes of Conduct from other places for inspiration:
+
+-   [Openscapes](https://openscapes.org/code-of-conduct.html)
+-   [Code for America](https://codeforamerica.org/code-of-conduct/)
+-   [Women in Data Science](https://www.widsconference.org/codeofconduct.html#:~:text=All%20participants%20are%20expected%20to,or%20harassing%20behavior%20and%20speech.)
